--- a/style.css
+++ b/style.css
@@ -29,7 +29,13 @@ body {
     margin-top: 20px;
     margin-bottom: 40x;
     }  
-#rodape{
+.lado-esquerdo{
+
+}
+.lado-direito{
+    
+}
+    #rodape{
    position:fixed; bottom:0px;
    margin-top:20px;
     }
