--- a/style.css
+++ b/style.css
@@ -4,5 +4,103 @@ body {
 
 #cabecalho {
         position: fixed;
-        top: 0;
+        top: 0px;
+        margin-bottom: 35px;
+        background-color: #0fa36b;
+        width: 100%;
+        height: 150px;
+        text-align: center;
+}
+
+
+* {
+    margin: 0px;
+}
+
+#minha_foto{
+    width: 300px;
+    margin-top: 200px;
+    border-radius: 100px;
+    display: inline;
+    margin-left: 35px;
+}
+#licoes_aprendidas {
+    float: right;
+    margin-right: 500px;
+
+}
+
+.lists {
+background-color: rgb(11, 143, 42, 0.5);
+float: right;
+width:70%;
+margin-top: 250px;
+
+}
+
+.lists ol{
+    display: inline;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+#cabecalho li{
+    display: inline-block;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-top: 80px ;
+    padding-left: 50px;
+    width:200 px;
+
+}
+#cabecalho ul {
+ max-width: 50%;
+ margin-left: 275px;
+}
+ #my-learning{
+
+        max-width: 50%;
+        text-align: center;
+        margin-left: 25%;
+        margin-top: 90px;
+        margin-bottom: 100px;
+        font-size: 20px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ }
+
+ #my-learning h2 {
+     font-size: 30px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+ }
+
+ #aside {
+     max-width: 100%;
+     background-color:rgb(11, 143, 42, 0.5);;
+     text-align: center;
+     height: 200px;
+ }
+
+
+#aside p{
+    font-size: 17px;
+    max-width: 22%;
+    margin-left: 70%;
+    justify-items: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
+}
+
+#rodape a{
+    color: white;
+    font-size: 20px;
+    margin-left: 100px;
+    display: inline;
+}
+#rodape{
+
+    background-color: rgb(0, 126,0);
+
+
 }
