--- a/style.css
+++ b/style.css
@@ -111,7 +111,6 @@ h3 {
   margin-top: 230px;
   text-align: center;
   background-color: rgb(109 , 43 , 114);
-  color: aliceblue;
   padding: 30px;
   width: 150px;
   border: 2px solid rgb(124 , 96 , 107);
@@ -121,6 +120,10 @@ h3 {
   top: 0;
   z-index: 1;
   box-shadow: 5px 10px 10px rgb(161 , 160 , 160);
+  font-family: ubuntu , sans-serif;
+  letter-spacing: 2px;
+  color: aliceblue;
+  font-size: 30px;
 }
 
 .menu-superior {
@@ -172,9 +175,4 @@ h3 {
   margin-top: 10px;
   font-weight: 3500;
   font-size: 22px;
-}
-
-.troca-fonte {
-  font-family: "ubuntu" , sans-serif;
-  letter-spacing: 2px;
 }
