--- a/style.css
+++ b/style.css
@@ -124,8 +124,8 @@ h3 {
   color: aliceblue;
   letter-spacing: 2px;
   font-family: ubuntu , sans-serif;
-  font-style: ;
-  }
+  font-style: bold;
+}
 
 .menu-superior {
   font-size: 17px;
