--- a/style.css
+++ b/style.css
@@ -125,11 +125,7 @@ h3 {
   font-family: ubuntu , sans-serif;
   font-size: 30px;
   font-style: bold;
-  font-variant: normal;
-  font-weight: 1500;
-  letter-spacing: 2px;
-  font-stretch: normal;
-}
+ }
 
 .menu-superior {
   font-size: 17px;
@@ -168,6 +164,7 @@ h3 {
   top: 400px;
   display: inline-block;
   z-index: 1;
+  line-height: 1.5;
 }
 
 .tabela {
