--- a/style.css
+++ b/style.css
@@ -6,9 +6,18 @@ body {
     margin: 0 auto;
 }
 
+h1 {
+    color: rgb(253, 251, 251);
+}
+
 .header {
     font-size: 20;
     font-family: Arial, Arial, Helvetica, sans-serif;
     padding: 10px;
     text-align: center;
+    background-color: rgb(36, 202, 91);
+}
+
+#cabecalho {
+    background-color: rgb(36, 202, 91);
 }
