--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ table {
     padding: 15px;
     margin-left: 28em;
 }
-.lado-esquerdo {
+#lado-esquerdo {
     margin-top: 100px;
     float: left;
     width: 45%;   
