--- a/style.css
+++ b/style.css
@@ -48,20 +48,20 @@ table {
     padding: 15px;
     margin-left: 28em;
 }
-.lado-esquerdo {
+.lado-esquerdo {    
     margin-top: 100px;
     float: left;
     width: 45%;   
     text-align: center;
     
 }
-.lado-direito {    
+.lado-direito {      
     margin-top: 100px;
     float: right;
     width: 45%;   
     position: relative;  
     right: 10em;  
-    bottom: 1em;
+    top: 0em;
     text-align: center;
     
     
