adiciona ultimo requisito

--- a/style.css
+++ b/style.css
@@ -221,3 +221,11 @@ footer {
   line-height: 30px;
   font-size: 15px;
 }
+
+.lado-esquerdo {
+  float: left;
+}
+
+.lado-direito {
+  float: right;
+}
