--- a/style.css
+++ b/style.css
@@ -40,8 +40,7 @@ nav {
 
 #minha_foto {
   background-color: black;
-  float: left;
-  display: inline-block;
+  display: flex;
   margin-left: 20px;
   margin-top: 150px;
   z-index: 11;
