--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
   padding: 0;
 }
 
-body {
+body p {
   background-color: rgb(253 , 251 , 251);
   font-size: 16px;
   color:red;
+  font-family: 'Courier New', Courier, monospace;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 #cabecalho {
