--- a/style.css
+++ b/style.css
@@ -3,11 +3,8 @@
   padding: 0;
 }
 
-body p {
+body {
   background-color: rgb(253 , 251 , 251);
-  font-size: 16px;
-  color:red;
-  font-family: "Courier New", Courier, monospace;
   margin-top: 10px;
   margin-bottom: 10px;
 }
