--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
-  margin-top: 10px;
-  margin-bottom: 10px;
+  
 }
 
 #cabecalho {
@@ -18,13 +17,16 @@ body {
 }
 
 #licoes_aprendidas {
+  font-family: 'Courier New', Courier, monospace;
   font-size: 16px;
   color: red;
   margin-left: 25px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 #licoes_a_aprender {
+  font-family: 'Courier New', Courier, monospace;
   font-size: 16px;
   color: red;
   margin-left: 25px;
