--- a/style.css
+++ b/style.css
@@ -45,3 +45,18 @@ body {
   text-align: center;
   border-collapse: collapse;
 }
+#conteudo, p {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 16px;
+  color: red;
+  line-height: 20px;
+  margin-top: 10px;
+}
+
+#conteudo, p {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 16px;
+  color: red;
+  line-height: 20px;
+  margin-top: 10px;
+}
