--- a/style.css
+++ b/style.css
@@ -55,32 +55,20 @@ body {
   margin-left: 10px;
 }
 
-#licoes_aprendidas {
-  width: 40%;
-  display: inline-block;
-  margin-left: 40px;
-}
-
-#licoes_a_aprender {
-  width: 40%;
-  margin-left: 10%;
-  display: inline-block;
-}
-
-#licoes_aprendidas li {
+#laicoes_prendidas {
   font-family: Courier, monospace;
   font-size: 16px;
   color: red;
-  margin-left: 25px;
+  margin-left: 50px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-#licoes_a_aprender li {
+#licoes_a_aprender {
   font-family: Courier, monospace;
   font-size: 16px;
   color: red;
-  margin-left: 25px;
+  margin-left: 40px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
