--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
   margin-left: 10px;
 }
 
-#laicoes_prendidas {
+#licoes_aprendidas {
   font-family: Courier, monospace;
   font-size: 16px;
   color: red;
