--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   top: 0px;
   width: 100%;
   text-align: center;
-  background-color: rgb(60 ,179 ,113);
+  background-color: mediumseagreen;
 }
 
 #container-article-aside {
