--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 #cabecalho {
   position: relative;
-  margin: 0px 2px;
+  top: 0;
   width: 100%;
   text-align: center;
   background-color: mediumseagreen;
