corrigindo nomes de id's conforme solicitado

--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ article {
     padding-top: 120px;
 }
 
-#side-content {
+#conteudo_lateral {
     padding-top: 120px;
     float: right;
     
 }
 
-#lessons-learned {
+#licoes_a_aprender {
     
 }
